src/objects/DD_Provider_NPI__c.object
<CustomObject>
    <fields>
        <fullName>DD_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_NPI__c</fullName>
        <label>NPI</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DD_Provider_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPI</relationshipLabel>
        <relationshipName>NPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NPI</label>
    <nameField>
        <displayFormat>NPI-{000000}</displayFormat>
        <label>NPI Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DD_Numeric_Check_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNUMBER( DD_NPI__c ))</errorConditionFormula>
        <errorDisplayField>DD_NPI__c</errorDisplayField>
        <errorMessage>Only numeric values can be entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DD_Provider_Update_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED( DD_Provider_Lookup__c )  &amp;&amp; ISNEW())  || ISCHANGED( DD_Provider_Lookup__c )</errorConditionFormula>
        <errorDisplayField>DD_Provider_Lookup__c</errorDisplayField>
        <errorMessage>Provider cannot be changed</errorMessage>
    </validationRules>
</CustomObject>